feat: 页面开发完成80%

--- a/src/global.less
+++ b/src/global.less
@@ -1,6 +1,7 @@
 // eslint-disable-next-line function-url-quotes
 
-@import url('./variable.less'); //@import url('./editStyle.less');; //antd组件样式修改
+@import url('./variable.less');
+@import url('./editStyle.less'); //antd组件样式修改
 
 body {
   margin: 0;
