--- a/src/editStyle.less
+++ b/src/editStyle.less
@@ -151,30 +151,30 @@ body {
   .ant-dropdown-menu-submenu-title.ant-dropdown-menu-submenu-title-active {
     background-color: #e8f3ff;
   }
-  //按钮
-  .ant-btn:hover,
-  .ant-btn:focus {
-    color: #4e5969;
-    border-color: #86909c;
-  }
-
-  .ant-btn {
-    border-color: #86909c;
-    color: #4e5969;
-    box-shadow: none;
-    height: 28px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-  }
-
-  .ant-btn-primary,
-  .ant-btn-primary:hover,
-  .ant-btn-primary:focus {
-    background: #ff3029 !important;
-    border-radius: 2px;
-    border-color: #ff3029 !important;
-    color: #fff;
-  }
+  ////按钮
+  //.ant-btn:hover,
+  //.ant-btn:focus {
+  //  color: #4e5969;
+  //  border-color: #86909c;
+  //}
+  //
+  //.ant-btn {
+  //  border-color: #86909c;
+  //  color: #4e5969;
+  //  box-shadow: none;
+  //  height: 28px;
+  //  padding-top: 2px;
+  //  padding-bottom: 2px;
+  //}
+  //
+  //.ant-btn-primary,
+  //.ant-btn-primary:hover,
+  //.ant-btn-primary:focus {
+  //  background: #ff3029 !important;
+  //  border-radius: 2px;
+  //  border-color: #ff3029 !important;
+  //  color: #fff;
+  //}
 
   //select滚动条
   .rc-virtual-list-scrollbar-thumb {
