--- a/src/global.less
+++ b/src/global.less
@@ -54,3 +54,9 @@ a {
 a:hover {
   color: #f5222d;
 }
+
+:where(
+    .css-dev-only-do-not-override-jbrqf2
+  ).ant-pro-query-filter-collapse-button {
+  color: #f5222d !important;
+}
