--- a/src/global.less
+++ b/src/global.less
@@ -8,14 +8,14 @@ body {
 }
 
 .ant-pro-layout
-  .ant-pro-base-menu.ant-menu:not(.ant-menu-horizontal)
-  .ant-menu-item:hover,
+.ant-pro-base-menu.ant-menu:not(.ant-menu-horizontal)
+.ant-menu-item:hover,
 .ant-pro-layout
-  .ant-pro-base-menu.ant-menu:not(.ant-menu-horizontal)
-  .ant-menu-item-active,
+.ant-pro-base-menu.ant-menu:not(.ant-menu-horizontal)
+.ant-menu-item-active,
 .ant-pro-layout
-  .ant-pro-base-menu.ant-menu:not(.ant-menu-horizontal)
-  .ant-menu-submenu-title:hover {
+.ant-pro-base-menu.ant-menu:not(.ant-menu-horizontal)
+.ant-menu-submenu-title:hover {
   border-radius: 0;
   color: #fff;
 }
@@ -36,8 +36,7 @@ body {
     display: block;
     width: 168px;
     height: 280px;
-    background: url('https://s.xinc818.com/files/webcil99b3pae1vs53p/bg_img.png')
-      no-repeat;
+    background: url('https://s.xinc818.com/files/webcil99b3pae1vs53p/bg_img.png') no-repeat;
     background-size: cover;
     position: absolute;
     bottom: 0;
