feat: 联调的差不多了

--- a/src/global.less
+++ b/src/global.less
@@ -1,10 +1,15 @@
-  // eslint-disable-next-line function-url-quotes
+// eslint-disable-next-line function-url-quotes
 
 @import url('./variable.less');
 @import url('./editStyle.less'); //antd组件样式修改
 
 body {
   margin: 0;
+}
+
+.ant-pro-sider-menu-icon {
+  width: 16px !important;
+  height: 16px !important;
 }
 
 .ant-pro-layout
