feat: 联调的差不多了

--- a/src/pages/register/index.less
+++ b/src/pages/register/index.less
@@ -90,6 +90,7 @@
   height: 36px;
   font-family: PingFangSC-Regular;
   font-weight: 400;
+  display: flex;
   font-size: 14px;
   color: #466eff;
   line-height: 36px;
