--- a/src/global.less
+++ b/src/global.less
@@ -7,11 +7,11 @@ body {
   margin: 0;
 }
 
-:where(.css-dev-only-do-not-override-r4xjzx).ant-pro-base-menu .ant-pro-base-menu-item-icon {
-  height: 14px !important;
-  width: 14px !important;
-  opacity: 0.85 !important;
-  line-height: 14px !important;
+.anticon{
+  img{
+    width: 14px;
+    height: 14px;
+  }
 }
 
 .ant-pro-layout
