--- a/src/pages/register/index.less
+++ b/src/pages/register/index.less
@@ -65,6 +65,18 @@
   border-radius: 4px;
 
   :global {
+    .ant-btn-primary[disabled],
+    .ant-btn-primary[disabled]:hover,
+    .ant-btn-primary[disabled]:focus,
+    .ant-btn-primary[disabled]:active {
+      color: rgba(0, 0, 0, 0.25);
+      border-color: #d9d9d9;
+      background: #f5f5f5;
+      text-shadow: none;
+      box-shadow: none;
+
+    }
+
     .ant-btn-primary {
       color: #fff;
       background: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
