--- a/src/pages/register/index.less
+++ b/src/pages/register/index.less
@@ -60,7 +60,7 @@
   height: 36px;
   text-align: center;
   color: #fff;
-  background-image: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
+  //background-image: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
   box-shadow: 0 4px 12px 0 rgb(167 186 255 / 70%);
   border-radius: 4px;
 
@@ -70,30 +70,29 @@
     .ant-btn-primary[disabled]:focus,
     .ant-btn-primary[disabled]:active {
       color: rgba(0, 0, 0, 0.25);
-      border-color: #d9d9d9;
+      border: 0px;
       background: #f5f5f5;
       text-shadow: none;
       box-shadow: none;
-
     }
 
     .ant-btn-primary {
       color: #fff;
       background: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
-      border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
+      //border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
     }
 
     .ant-btn-primary:hover,
     .ant-btn-primary:focus {
       color: #fff;
       background: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
-      border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
+      //border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
     }
 
     .ant-btn-primary:active {
       color: #fff;
       background: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
-      border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
+      //border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
     }
   }
 }
