--- a/src/components/goodsTableCol/index.less
+++ b/src/components/goodsTableCol/index.less
@@ -19,4 +19,13 @@
       color: rgba(0, 0, 0, 0.45)
     }
   }
+  .iamgeTitle {
+    position: absolute;
+    bottom: 0;
+    width: 80px;
+    padding: 2px 0;
+    color: #fff;
+    text-align: center;
+    background: #d7d7d7;
+  }
 }
