fix: 商品中心，订单bug

--- a/src/pages/goods/Create/index.less
+++ b/src/pages/goods/Create/index.less
@@ -1,36 +1,44 @@
 .goodsCreate {
-  background: #fff;
   padding: 20px;
   overflow: hidden;
+  background: #fff;
+
   h2 {
+    padding: 10px;
     margin: 0;
+    margin-bottom: 20px;
     font-size: 14px;
     border-bottom: 1px solid #e3e3e3;
-    padding: 10px;
-    margin-bottom: 20px;
   }
+
   .plr20 {
     padding: 0 30px;
   }
+
   :global(div.ant-select-selector) {
     // border: 1px solid #e3e3e3 !important;
     height: 30px !important;
   }
+
   :global(input.ant-input-status-error) {
     border-color: #ff4d4f !important;
   }
+
   :global(.sku__table-wrapper input.ant-input-status-error) {
     border-color: #e3e3e3 !important;
   }
+
   :global(.sku__table-wrapper input.ant-input-status-error.ant-input-required) {
     border-color: #ff4d4f !important;
   }
+
   :global(.sku__table-wrapper .ant-upload),
   :global(.sku__table-wrapper .ant-upload-list-picture-card-container) {
     width: 60px;
     height: 60px;
   }
+
   :global(.ant-upload-list .ant-btn-text:hover) {
-    background: rgba(0, 0, 0, 0.018) !important;
+    background: rgb(0 0 0 / 1.8%) !important;
   }
 }
