fix: 工厂入驻样式修改

--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -3,7 +3,9 @@
   min-height: 100vh;
   position: relative;
   overflow: hidden;
-  background-image: url('../../../public/bj.png');
+  background: url('../../../public/bj.png') no-repeat;
+  background-size:100% 100%;
+  background-attachment:fixed;
 }
 
 :global {
