--- a/src/global.less
+++ b/src/global.less
@@ -14,6 +14,10 @@ body {
   }
 }
 
+.w-full{
+  width: 100%;
+}
+
 .ant-pro-layout
 .ant-pro-base-menu.ant-menu:not(.ant-menu-horizontal)
 .ant-menu-item:hover,
