--- a/src/global.less
+++ b/src/global.less
@@ -7,14 +7,18 @@ body {
   margin: 0;
 }
 
-.anticon{
-  img{
+.anticon {
+  img {
     width: 14px;
     height: 14px;
   }
 }
 
-.w-full{
+.ant-pro-card ant-pro-table-search ant-pro-table-search-query-filter {
+  padding: 24px !important;
+}
+
+.w-full {
   width: 100%;
 }
 
@@ -69,4 +73,8 @@ a:hover {
     .css-dev-only-do-not-override-jbrqf2
   ).ant-pro-query-filter-collapse-button {
   color: #f5222d !important;
+}
+
+.ant-form {
+
 }
