--- a/src/pages/goods/Create/index.less
+++ b/src/pages/goods/Create/index.less
@@ -11,10 +11,6 @@
     border-bottom: 1px solid #e3e3e3;
   }
 
-  .required {
-    color: #ff4d4f
-  }
-
   .plr20 {
     padding: 0 30px;
   }
@@ -45,4 +41,9 @@
   :global(.ant-upload-list .ant-btn-text:hover) {
     background: rgb(0 0 0 / 1.8%) !important;
   }
+
+  .required {
+    color: #ff4d4f;
+  }
+
 }
