--- a/src/pages/register/index.less
+++ b/src/pages/register/index.less
@@ -10,12 +10,29 @@
   .ant-pro-basicLayout-content {
     margin: 0;
   }
+
+  .ant-input-affix-wrapper-lg {
+    border-radius: 4px !important;
+  }
+
+  .ant-input {
+    border-radius: 4px !important;
+  }
+
+  .ant-form-item .ant-form-item-explain {
+    font-size: 12px
+  }
 }
 
 .icon {
   position: absolute;
-  left: 238px;
+  left: 80px;
   top: 60px;
+
+  img {
+    width: 100px;
+    height: 40px;
+  }
 }
 
 .content {
@@ -23,9 +40,10 @@
   //height: 810px;
   background: #fff;
   box-shadow: 0 8px 16px 0 rgb(80 91 115 / 16%);
-  border-radius: 16px;
+  border-radius: 8px;
   margin: 163px auto 0;
   overflow: hidden;
+  position: relative;
 }
 
 .register {
