--- a/src/pages/goods/Detail/index.less
+++ b/src/pages/goods/Detail/index.less
@@ -1,40 +1,47 @@
 .goods__detail-wrap {
-  margin: 12px;
-  padding: 0px 40px;
   background-color: #fff;
+
   h1 {
-    font-size: 14px;
+    position: relative;
     padding: 0 10px;
     margin: 30px 0 20px;
-    position: relative;
-    &:after {
-      content: '';
+    font-size: 14px;
+
+    &::after {
       position: absolute;
-      left: 0;
       top: 0;
+      left: 0;
       width: 2px;
       height: 18px;
       background: var(--theme-color);
+      content: '';
     }
   }
+
   p {
     color: #666;
   }
+
   .u-fs16 {
     font-size: 16px;
   }
+
   .u-fw700 {
     font-weight: 700;
   }
+
   .u-mr10 {
     margin-right: 10px;
   }
+
   .u-ml20 {
     margin-left: 20px;
   }
+
   .u-mt10 {
     margin-top: 10px;
   }
+
   .u-flex {
     display: flex;
     justify-content: space-between;
