--- a/src/components/AvatarName/index.less
+++ b/src/components/AvatarName/index.less
@@ -1,7 +1,7 @@
 .avatar-name{
   display: flex;
   justify-content: end;
-  background: #fff;
+  background: #F7F8FA;
   height: 50px;
   align-items: center;
   padding-right: 40px;
