--- a/src/global.less
+++ b/src/global.less
@@ -16,6 +16,11 @@ body {
 
 .ant-pro-card ant-pro-table-search ant-pro-table-search-query-filter {
   padding: 24px !important;
+  padding-bottom: 0px !important;
+}
+
+.ant-pro-query-filter {
+  padding-bottom: 0px !important;
 }
 
 .w-full {
@@ -35,6 +40,7 @@ body {
   color: #fff;
 }
 
+
 .ant-tabs-nav {
   background: #fff;
 }
@@ -51,7 +57,7 @@ body {
     display: block;
     width: 168px;
     height: 280px;
-    background: url('https://s.xinc818.com/files/webcil99b3pae1vs53p/bg_img.png') no-repeat;
+    //background: url('https://s.xinc818.com/files/webcil99b3pae1vs53p/bg_img.png') no-repeat;
     background-size: cover;
     position: absolute;
     bottom: 0;
@@ -61,12 +67,16 @@ body {
   }
 }
 
+.ant-pro-page-container-children-content {
+  padding: 0px !important;
+}
+
 a {
-  color: #f5222d;
+  color: #4970FF;
 }
 
 a:hover {
-  color: #f5222d;
+  color: #4970FF;
 }
 
 :where(
