--- a/src/global.less
+++ b/src/global.less
@@ -71,6 +71,11 @@ body {
   padding: 0px !important;
 }
 
+.ant-pro-layout .ant-pro-sider-logo {
+  padding: 0px;
+  border: 0px
+}
+
 a {
   color: #4970FF;
 }
