--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -4,8 +4,8 @@
   position: relative;
   overflow: hidden;
   background: url('../../../public/bj.png') no-repeat;
-  background-size:100% 100%;
-  background-attachment:fixed;
+  background-size: 100%;
+  //background-attachment:fixed;
 }
 
 :global {
