--- a/src/editStyle.less
+++ b/src/editStyle.less
@@ -27,14 +27,14 @@ body {
   .ant-picker-time-panel-column
     > li.ant-picker-time-panel-cell-selected
     > .ant-picker-time-panel-cell-inner {
-    background: #315ff5;
+    background: #3D54CC;
     color: #fff;
   }
 
   .ant-picker-time-panel-column
     > li.ant-picker-time-panel-cell-selected
     > .ant-picker-time-panel-cell-inner:hover {
-    background: #315ff5;
+    background: #3D54CC;
   }
 
   .ant-picker-footer > .ant-picker-ranges > .ant-picker-ok {
@@ -54,7 +54,7 @@ body {
   .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner,
   .ant-picker-cell-in-view.ant-picker-cell-range-start .ant-picker-cell-inner,
   .ant-picker-cell-in-view.ant-picker-cell-range-end .ant-picker-cell-inner {
-    background-color: #315ff5;
+    background-color: #3D54CC;
   }
 
   .ant-picker-cell-in-view.ant-picker-cell-in-range::before {
@@ -76,7 +76,7 @@ body {
   .ant-picker-date-panel
     .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-end
     .ant-picker-cell-inner::after {
-    background: #315ff5;
+    background: #3D54CC;
   }
 
   .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover::before,
@@ -113,12 +113,12 @@ body {
   }
 
   .ant-pro-table-alert-info-option a {
-    color: #315ff5;
+    color: #3D54CC;
   }
 
   .ant-checkbox-checked .ant-checkbox-inner {
-    background-color: #315ff5;
-    border-color: #315ff5;
+    background-color: #3D54CC;
+    border-color: #3D54CC;
   }
 
   .ant-table-tbody > tr.ant-table-row-selected > td {
@@ -126,7 +126,7 @@ body {
   }
 
   .ant-checkbox-indeterminate .ant-checkbox-inner::after {
-    background-color: #315ff5;
+    background-color: #3D54CC;
   }
 
   .custom-table .ant-pro-table-search .ant-pro-form {
