fix: 优化样式 更新@xlion/utils

--- a/src/global.less
+++ b/src/global.less
@@ -38,6 +38,13 @@ body {
 .ant-menu-submenu-title:hover {
   border-radius: 0;
   color: #fff;
+  background-color: #3D54CC;
+}
+.ant-pro-layout
+.ant-pro-base-menu.ant-menu:not(.ant-menu-horizontal)
+.ant-menu-submenu-title {
+  height: 36px;
+  line-height: 36px;
 }
 
 
