--- a/src/editStyle.less
+++ b/src/editStyle.less
@@ -7,6 +7,8 @@ body {
     margin: 0px;
     padding: 0px;
     width: 100%;
+    height: 36px;
+    line-height: 36px;
   }
 
   .ant-menu-item-selected {
