--- a/src/global.less
+++ b/src/global.less
@@ -45,6 +45,11 @@ body {
 .ant-menu-submenu-title {
   height: 36px;
   line-height: 36px;
+  margin-block: 0;
+}
+.ant-pro-layout
+.ant-menu-submenu {
+  padding-bottom: 0;
 }
 
 
