--- a/src/pages/goods/Detail/index.less
+++ b/src/pages/goods/Detail/index.less
@@ -43,6 +43,10 @@
     margin-top: 10px;
   }
 
+  .u-ml10 {
+    margin-left: 10px;
+  }
+
   .u-flex {
     display: flex;
     justify-content: space-between;
