feat: 重写订单管理

--- a/src/components/goodsTableCol/index.less
+++ b/src/components/goodsTableCol/index.less
@@ -1,6 +1,7 @@
 .good-table-list {
   &-img {
-    width: 120px;
+    // width: 120px;
+    margin-right: 10px;
   }
 
   img {
@@ -16,10 +17,11 @@
     font-size: 8px;
 
     span {
-      color: rgba(0, 0, 0, 0.45)
+      color: rgb(0 0 0 / 45%);
     }
   }
-  .iamgeTitle {
+
+  .imageTitle {
     position: absolute;
     bottom: 0;
     width: 80px;
