--- a/src/pages/Orders/SalesOrder/List/index.less
+++ b/src/pages/Orders/SalesOrder/List/index.less
@@ -10,6 +10,21 @@
     .imageStyle {
       position: relative;
       margin-right: 15px;
+
+      .imageCounts {
+        position: absolute;
+        top: -10px;
+        left: -10px;
+        display: block;
+        width: 20px;
+        color: #311ddc;
+        text-align: center;
+        background-color: #f3f3f3;
+        // background-color: aqua;
+        border: 1px solid #fff;
+        border-radius: 50%;
+        opacity: 0.6;
+      }
     }
 
     .imageTitle {
