--- a/src/pages/Orders/SalesOrder/List/index.less
+++ b/src/pages/Orders/SalesOrder/List/index.less
@@ -40,5 +40,11 @@
     .infoTit {
       // color: #315ff5;
     }
+
+    .imageBoxItem {
+      display: flex;
+      cursor: pointer;
+      align-items: center;
+    }
   }
 }
