fix: 优化列表样式

--- a/src/components/goodsTableCol/index.less
+++ b/src/components/goodsTableCol/index.less
@@ -1,6 +1,5 @@
 .good-table-list {
   &-img {
-    // width: 120px;
     margin-right: 10px;
   }
 
@@ -13,12 +12,10 @@
   }
 
   .content-name {
+    display: flex;
+    align-items: center;
     margin-top: 2px;
     font-size: 8px;
-
-    span {
-      color: rgb(0 0 0 / 45%);
-    }
   }
 
   .imageTitle {
