fix(款式详情): fix style bug

--- a/src/global.less
+++ b/src/global.less
@@ -5,6 +5,14 @@
 
 body {
   margin: 0;
+
+  .t-c__blue {
+    color: var(--theme-blue-color);
+  }
+
+  .t-c__red {
+    color: var(--theme-color);
+  }
 }
 
 .anticon {
