--- a/src/pages/Goods/Info/Detail/index.less
+++ b/src/pages/Goods/Info/Detail/index.less
@@ -1,6 +1,7 @@
 .goods__detail-wrap {
+  padding: 0 40px;
+  margin: 12px;
   background-color: #fff;
-  padding-left: 40px;
 
   h1 {
     position: relative;
@@ -41,10 +42,6 @@
 
   .u-mt10 {
     margin-top: 10px;
-  }
-
-  .u-ml10 {
-    margin-left: 10px;
   }
 
   .u-flex {
