--- a/src/pages/Goods/Info/Detail/index.less
+++ b/src/pages/Goods/Info/Detail/index.less
@@ -48,4 +48,16 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .otherInfo {
+    table {
+      tbody {
+        tr {
+          td {
+            padding: 0 0 5px 0;
+          }
+        }
+      }
+    }
+  }
 }
