--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -18,7 +18,6 @@
   }
 }
 
-
 .icon {
   position: absolute;
   left: 80px;
@@ -38,7 +37,7 @@
   text-rendering: optimizeLegibility;
   font-weight: 600;
   font-size: 36px;
-  color: #FFFFFF;
+  color: #ffffff;
   letter-spacing: 0;
   text-align: center;
   line-height: 36px;
@@ -114,20 +113,20 @@
   color: #fff;
 
   :global {
-    .ant-btn-primary {
+    .ui-btn-primary {
       color: #fff;
       background: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
       border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
     }
 
-    .ant-btn-primary:hover,
-    .ant-btn-primary:focus {
+    .ui-btn-primary:hover,
+    .ui-btn-primary:focus {
       color: #fff;
       background: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
       border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
     }
 
-    .ant-btn-primary:active {
+    .ui-btn-primary:active {
       color: #fff;
       background: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
       border-color: linear-gradient(270deg, #3b66fd 0%, #5495ff 100%);
