style: style change

--- a/src/global.less
+++ b/src/global.less
@@ -46,7 +46,7 @@ body {
   .ant-menu-submenu-title:hover {
   border-radius: 0;
   color: #fff;
-  background-color: #3d54cc;
+  background-color: #001529;
 }
 
 .ant-pro-layout
