--- a/src/editStyle.less
+++ b/src/editStyle.less
@@ -38,14 +38,14 @@ body {
   .ant-picker-time-panel-column
   > li.ant-picker-time-panel-cell-selected
   > .ant-picker-time-panel-cell-inner {
-    background: #3D54CC;
+    background: #001529;
     color: #fff;
   }
 
   .ant-picker-time-panel-column
   > li.ant-picker-time-panel-cell-selected
   > .ant-picker-time-panel-cell-inner:hover {
-    background: #3D54CC;
+    background: #001529;
   }
 
   .ant-picker-footer > .ant-picker-ranges > .ant-picker-ok {
@@ -67,7 +67,7 @@ body {
   .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner,
   .ant-picker-cell-in-view.ant-picker-cell-range-start .ant-picker-cell-inner,
   .ant-picker-cell-in-view.ant-picker-cell-range-end .ant-picker-cell-inner {
-    background-color: #3D54CC;
+    background-color: #001529;
   }
 
   .ant-picker-cell-in-view.ant-picker-cell-in-range::before {
@@ -89,7 +89,7 @@ body {
   .ant-picker-date-panel
   .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-end
   .ant-picker-cell-inner::after {
-    background: #3D54CC;
+    background: #001529;
   }
 
   .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover::before,
@@ -126,12 +126,12 @@ body {
   }
 
   .ant-pro-table-alert-info-option a {
-    color: #3D54CC;
+    color: #001529;
   }
 
   .ant-checkbox-checked .ant-checkbox-inner {
-    background-color: #3D54CC;
-    border-color: #3D54CC;
+    background-color: #001529;
+    border-color: #001529;
   }
 
   .ant-table-tbody > tr.ant-table-row-selected > td {
@@ -139,7 +139,7 @@ body {
   }
 
   .ant-checkbox-indeterminate .ant-checkbox-inner::after {
-    background-color: #3D54CC;
+    background-color: #001529;
   }
 
   .custom-table .ant-pro-table-search .ant-pro-form {
