--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,3 +1,76 @@
-.container {
-  padding-top: 80px;
+.bg {
+  width: 100%;
+  min-height: 100vh;
+  background-image: url('../../../public/img/bg.png');
+  background-size: 100% 100%;
+  position: relative;
+}
+
+.content {
+  min-width: 1366px;
+  padding: 20px 40px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .content_l {
+    .year_chose {
+      background-color: transparent;
+      color: #72e3ff;
+      border: #00c0ef 2px solid;
+      width: 200px;
+      text-indent: 0.6em;
+      border-radius: 5px;
+    }
+  }
+
+  .content_r {
+    text-align: right;
+    .content_r_time {
+      color: #fff;
+      font-size: 15px;
+    }
+  }
+
+  .floatBox {
+    margin-top: 20px;
+    width: 382px;
+    border-radius: 8px;
+    height: 300px;
+    background-color: rgba(0, 168, 255, 0.2);
+  }
+
+  .content_main {
+    width: 482px;
+    border-radius: 8px;
+    height: 100px;
+    background-color: rgba(0, 168, 255, 0.2);
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    right: 50%;
+    transform: translate(-50%, -50%);
+
+    .content_main_f {
+      color: #fff;
+      font-size: 14px;
+      display: flex;
+      height: 100%;
+      align-items: center;
+
+      .flexBox {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          width: 40px;
+          height: 40px;
+          margin-bottom: 10px;
+        }
+      }
+    }
+  }
 }
