--- a/src/pages/Home/Security/index.less
+++ b/src/pages/Home/Security/index.less
@@ -1,129 +1,9 @@
-.container {
-  width: 100%;
-  min-height: 100vh;
-  background: url('../../../public/img/bg.png') no-repeat #061537;
-  background-size: cover;
-  overflow: hidden;
-  position: relative;
-  min-width: 1386px;
-
-  .main_middle {
-    width: 422px;
-    border-radius: 8px;
-    height: 100px;
-    background-color: rgba(0, 168, 255, 20%);
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%);
-
-    .m_m_f {
-      color: #fff;
-      font-size: 12px;
-      display: flex;
-      align-items: center;
-      height: 100%;
-
-      .flexBox {
-        cursor: pointer;
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        img {
-          width: 40px;
-          height: 40px;
-          margin-bottom: 10px;
-        }
-      }
-    }
-  }
-}
-
-.main,
-.top_tit {
+.security_main {
   padding: 20px 40px 0 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  .year_chose {
-    background-color: transparent;
-    color: #72e3ff;
-    border: #00c0ef 2px solid;
-    width: 200px;
-    text-indent: 0.6em;
-    border-radius: 5px;
-  }
-
-  .content_r_time {
-    text-align: right;
-    color: #fff;
-    font-size: 15px;
-  }
-
-  // 园区概况
-  .m_l_1,
-  .m_r_1 {
-    .card {
-      margin-top: 20px;
-      width: 392px;
-      border-radius: 8px;
-      background-color: rgba(0, 168, 255, 20%);
-      display: flex;
-      flex-direction: column;
-      padding: 0 10px 20px;
-
-      .barsBox {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 10px 0;
-
-        .tit {
-          font-size: 18px;
-          color: #fff;
-        }
-      }
-
-      .table_box {
-        max-height: 140px;
-        overflow: auto;
-
-        .t_table {
-          color: #fff;
-          width: 100%;
-          margin: 0 auto;
-          border-spacing: 0;
-          text-align: center;
-          box-sizing: border-box;
-          font-size: 12px;
-          table-layout: fixed;
-
-          tr {
-            margin: 0;
-            padding: 0;
-            line-height: 28px;
-          }
-
-          thead {
-            position: sticky;
-            top: 0;
-            tr {
-              background: #053a98;
-            }
-          }
-
-          td {
-            font-size: 12px;
-          }
-        }
-      }
-    }
-  }
   // 安防检测
   .m_l_2,
   .m_r_2 {
