style: all page style

--- a/src/global.less
+++ b/src/global.less
@@ -112,3 +112,15 @@ a:hover {
 
 .ant-form {
 }
+
+:where(.css-dev-only-do-not-override-zl9ks2).ant-breadcrumb {
+  a,
+  a:hover {
+    color: #fff;
+  }
+}
+
+:where(.css-dev-only-do-not-override-1wx0klw).ant-page-header
+  :where(.css-dev-only-do-not-override-1wx0klw).ant-page-header-heading-title {
+  color: #fff;
+}
