--- a/src/editStyle.less
+++ b/src/editStyle.less
@@ -36,15 +36,15 @@ body {
   //时间选择器_精确到秒
   .ant-picker-time-panel-cell.ant-picker-time-panel-cell-selected,
   .ant-picker-time-panel-column
-  > li.ant-picker-time-panel-cell-selected
-  > .ant-picker-time-panel-cell-inner {
+    > li.ant-picker-time-panel-cell-selected
+    > .ant-picker-time-panel-cell-inner {
     background: #001529;
     color: #fff;
   }
 
   .ant-picker-time-panel-column
-  > li.ant-picker-time-panel-cell-selected
-  > .ant-picker-time-panel-cell-inner:hover {
+    > li.ant-picker-time-panel-cell-selected
+    > .ant-picker-time-panel-cell-inner:hover {
     background: #001529;
   }
 
@@ -84,11 +84,11 @@ body {
   }
 
   .ant-picker-date-panel
-  .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-start
-  .ant-picker-cell-inner::after,
+    .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-start
+    .ant-picker-cell-inner::after,
   .ant-picker-date-panel
-  .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-end
-  .ant-picker-cell-inner::after {
+    .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-end
+    .ant-picker-cell-inner::after {
     background: #001529;
   }
 
@@ -102,11 +102,11 @@ body {
       .ant-picker-cell-range-end-single
     ).ant-picker-cell-range-hover-end::before,
   .ant-picker-panel
-  > :not(.ant-picker-date-panel)
-  .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-start::before,
+    > :not(.ant-picker-date-panel)
+    .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-start::before,
   .ant-picker-panel
-  > :not(.ant-picker-date-panel)
-  .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-end::before {
+    > :not(.ant-picker-date-panel)
+    .ant-picker-cell-in-view.ant-picker-cell-in-range.ant-picker-cell-range-hover-end::before {
     background-color: #e8f3ff;
   }
 
@@ -261,13 +261,6 @@ body {
     background: #ff3029;
   }
 
-  //
-  //
-  //
-  //
-  //
-  //
-  //
   //搜索条件
   .ant-pro-table .ant-pro-table-search,
   .homeBox {
@@ -292,8 +285,8 @@ body {
     }
 
     .ant-select-single:not(.ant-select-customize-input)
-    .ant-select-selector
-    .ant-select-selection-search-input {
+      .ant-select-selector
+      .ant-select-selection-search-input {
       height: 26px;
     }
 
@@ -352,7 +345,7 @@ body {
     .ant-select-focused:not(.ant-select-disabled).ant-select:not(
         .ant-select-customize-input
       )
-    .ant-select-selector {
+      .ant-select-selector {
       background: #fff;
       box-shadow: none;
       border: 1px solid #c9cdd4;
@@ -394,5 +387,19 @@ body {
       border: 1px solid #c9cdd4;
       box-shadow: none;
     }
+  }
+
+  :where(.css-dev-only-do-not-override-zl9ks2).ant-breadcrumb {
+    a,
+    a:hover {
+      color: #fff;
+    }
+  }
+
+  :where(.css-dev-only-do-not-override-1wx0klw).ant-page-header
+    :where(
+      .css-dev-only-do-not-override-1wx0klw
+    ).ant-page-header-heading-title {
+    color: #fff;
   }
 }
