--- a/src/pages/Home/index.less
+++ b/src/pages/Home/index.less
@@ -1,20 +1,34 @@
 .container {
   width: 100%;
   min-height: 100vh;
-  background: url('../../../public/img/bg.png') no-repeat #061537;
-  background-size: cover;
+  background: rgb(40, 30, 47) url('../../../public/img/bg.png') 0 0 / 100% 100%
+    no-repeat;
   overflow: hidden;
   position: relative;
-  min-width: 1386px;
+  min-width: 1200px;
 }
 
-.top_tit {
-  padding: 20px 40px 0;
+.header {
+  background: url('../../../public/img/header.png') 0 0 / 100% 100% no-repeat;
+  padding: 0 40px 0;
+  height: 72px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  .year_chose {
+  position: relative;
+
+  .title {
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 64px;
+  }
+
+  .h_c {
     background-color: transparent;
     color: #72e3ff;
     border: #00c0ef 2px solid;
@@ -23,7 +37,7 @@
     border-radius: 5px;
   }
 
-  .content_r_time {
+  .h_t {
     text-align: right;
     color: #fff;
     font-size: 15px;
