--- a/src/pages/Home/Footer/index.less
+++ b/src/pages/Home/Footer/index.less
@@ -1,4 +1,4 @@
-.main_middle {
+.footer {
   width: 422px;
   border-radius: 8px;
   height: 100px;
@@ -9,7 +9,7 @@
   right: 50%;
   transform: translate(-50%, -50%);
 
-  .m_m_f {
+  .f_warp {
     color: #fff;
     font-size: 12px;
     display: flex;
